--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -225,10 +225,14 @@
   font-weight: 500;
 }
 
+.content-wrapper {
+  position: relative;
+}
+
 .filter-dropdown {
   position: absolute;
   right: 0;
-  top: 15px;
+  top: -100px;
   z-index: 101;
 }
 
@@ -251,14 +255,15 @@
 .filter-menu {
   position: absolute;
   right: 0;
-  top: 3rem;
+  margin-top: 10px;
   width: 17rem;
   background: #fff;
   border: 1px solid #e5e7eb;
   border-radius: 0.5rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 1rem;
-  z-index: 102;
+  z-index: 999;
+  transform: none;
 }
 
 .filter-menu-options {
@@ -360,22 +365,6 @@
 
 .show-all-btn:hover {
   background-color: #1d4ed8;
-}
-
-.header-fade-in {
-  opacity: 0;
-  animation: headerFadeIn 0.8s ease-out forwards;
-}
-
-@keyframes headerFadeIn {
-  from {
-    opacity: 0;
-    z-index: 10000;
-  }
-  to {
-    opacity: 1;
-    z-index: 10000;
-  }
 }
 
 .fade-in-bottom-alt {
